--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,14 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Node (anywhere)
+node_modules/
+**/node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # ===== BACKEND IGNORE =====
 backend/target/
 backend/.idea/
