--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.application.name=hospital-opd
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/hospital_db
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=hospital_db
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI:mongodb://localhost:27017/hospital_db}
 
 # Server Configuration
-server.port=8081
+server.port=${PORT:8081}
+
+# CORS (comma-separated). For Vercel preview/prod URLs, patterns like https://*.vercel.app work.
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:3001,http://localhost:3002,https://*.vercel.app}
+
+# JWT (optional). Set in hosting platform env vars for stable auth tokens.
+# Must be at least 32 characters for HS256.
+app.jwt.secret=${APP_JWT_SECRET:}
